--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "webhook": "node webhook-server.js"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "ably": "^1.2.48",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "lucide-react": "^0.511.0",
-    "nakapay-react": "^0.1.0",
+    "nakapay-react": "^0.4.0",
     "nakapay-sdk": "^0.1.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
