--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.511.0",
     "nakapay-react": "^0.4.2",
-    "nakapay-sdk": "^0.1.1",
+    "nakapay-sdk": "0.1.3",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
