--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "ably": "^1.2.48",
+    "axios": "^1.9.0",
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
