--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lucide-react": "^0.511.0",
-    "nakapay-react": "^0.4.7",
-    "nakapay-sdk": "0.1.3",
+    "nakapay-react": "^0.4.8",
+    "nakapay-sdk": "^0.1.4",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
